@startuml

skinparam classAttributeIconSize 0
skinparam packageStyle rectangle

title Diagramme de classes Laboratoire 5



'MODÈLE'
package "Modèle" <<Rectangle>> {
    class ImageModele {
        - cheminImage : String
        - image : Image
        + chargerImage(chemin : String) : void
        + getImage() : Image
        + getCheminImage() : String
        + estChargee() : boolean
    }

    class Perspective {
        - translateX : double = 0
        - translateY : double = 0
        - zoom : double = 1
        + Perspective()
        + Perspective(translateX : double, translateY : double, zoom : double)
        + getTranslateX() : double
        + getTranslateY() : double
        + getZoom() : double
        + setTranslation(x : double, y : double) : void
        + setZoom(zoom : double) : void
        + copier() : Perspective
        + restaurer(autre : Perspective) : void
        + sauvegarderEtat() : PerspectiveMemento
        + restaurerEtat(memento : PerspectiveMemento) : void
    }

    'PATRON STRATEGY'
    package "Patron Strategy" <<Rectangle>> {
    interface CopieStrategie {
        + appliquer(source : PerspectiveMemento, destination : Perspective) : void
    }

    class StrategieCopieZoom implements CopieStrategie {
        + appliquer(source : PerspectiveMemento, destination : Perspective) : void <<override>>
    }

    class StrategieCopieTranslation implements CopieStrategie {
        + appliquer(source : PerspectiveMemento, destination : Perspective) : void <<override>>
    }

    class StrategieCopieTout implements CopieStrategie {
        + appliquer(source : PerspectiveMemento, destination : Perspective) : void <<override>>
    }
}

'PATRON OBSERVER'
package "Patron Observer" <<Rectangle>> {
    interface Observateur {
        + miseAJour() : void
    }

    abstract class SujetObservable {
        - observateurs : List<Observateur>
        + ajouterObservateur(obs : Observateur) : void
        + retirerObservateur(obs : Observateur) : void
        + notifierObservateurs() : void
    }

    SujetObservable o--> "*" Observateur : notifie
}

'MEMENTO'
package "Patron Memento" <<Rectangle>> {
    class PerspectiveMemento {
        - zoom : double {final}
        - translateX : double {final}
        - translateY : double {final}
        + PerspectiveMemento(zoom : double, translateX : double, translateY : double)
        + getZoom() : double
        + getTranslationX() : double
        + getTranslationY() : double
    }
}
}





'VUES'
package "Vues" <<Rectangle>> {
    class VueVignette {
        - canvas : Canvas {final}
        - imageModele : ImageModele {final}
        + miseAJour() : void <<override>>
        - dessiner() : void
    }

    class VuePerspective {
        - canvas : Canvas {final}
        - imageModele : ImageModele {final}
        - perspective : Perspective {final}
        - debutDragX : double
        - debutDragY : double
        - enDrag : boolean = false
        + VuePerspective(imageModel : ImageModel, perspective : Perspective)
        - configurerSouris() : void
        + miseAJour() : void <<override>>
        - dessiner() : void
        + getPerspective() : Perspective
    }
}

'SÉRIALISATION'
package "Sérialisation" <<Rectangle>> {
    class DonneesSauvegarde {
        - cheminImage : String {final}
        - perspective1 : Perspective {final}
        - perspective2 : Perspective {final}
        + DonneesSauvegarde(cheminImage : String, perspective1 : Perspective, perspective2 : Perspective)
        + getCheminImage() : String
        + getPerspective1() : Perspective
        + getPerspective2() : Perspective
    }

    class GestionnaireSauvegarde {
        + {static} sauvegarder(donnees : DonneesSauvegarde, fichier : File) : void
        + {static} charger(fichier : File) : DonneesSauvegarde
    }
}

'CONTROLEUR'
package "Controleur" <<Rectangle>> {


    class ControleurPerspective {
        - perspective : Perspective {final}
        - imageView : ImageView {final}
        - debutDragX : double 
        - debutDragY : double
        - debutTransX : double
        - debutTransY : double
        - enDrag : boolean = false
        - ancienZoom : double
        - zoomModeifie : boolean = false
        + ControleurPerspective(perspective : Perspective, imageView : ImageView)
        + deplacer(dx : double, dy : double) : void
        + zoomer(facteur : double) : void
    }

    'PATRON MEDIATOR'
    package "Patron Mediator" <<Rectangle>> {
    class PressePapierMediateur {
        - {static} instance : PressePapierMediateur
        - donneesCopiees : PerspectiveMemento
        - strategieCourante : CopieStrategie
        - PressePapierMediateur()
        + {static} getInstance() : PressePapierMediateur
        + setStrategie(strategie : CopieStrategie) : void
        + copier(source : Perspective) : void
        + coller(destination : Perspective) : void
        + estVide() : boolean
    }
}

'PATRON COMMAND'
package "Patron Command" <<Rectangle>> {
    interface Commande {
        + executer() : void
        + annuler() : void
    }

    class CommandePerspective implements Commande {
        - cible : Perspective {final}
        - avant : Perspective {final}
        - apres : Perspective {final}
        + CommandePerspective(cible : Perspective, avant : Perspective, apres : Perspective)
        + executer() : void
        + annuler() : void
    }
}

'PATRON SINGLETON'
package "Patron Singleton" <<Rectangle>> {
    class GestionnaireCommande {
        - instance : GestionnaireCommande {static} 
        - historique : Stack<Commande> {final}
        - redo : Stack<Commande> {final}
        - GestionnaireCommande()
        + getInstance() : GestionnaireCommande {static} 
        + executerCommande(commande : Commande) : void
        + ajouterCommande(commande : Commande) : void
        + annulerDernierCommande() : void
        + refaireDernierCommande() : void
    }
}
}

    class ApplicationPrincipale {
        - imageModele : ImageModele {final}
        - perspective1 : Perspective {final}
        - perspective2 : Perspective {final}
        - perspectiveActive : Perspective = null
        - vueVignette : VueVignette 
        - vue1 : VuePerspective
        - vue2 : VuePerspective
        + start(stage : Stage) : void <<override>>
        - ouvrirImage(stage : Stage) : void
        - createPane() : Pane 
        - sauvegarderPerspective(stage : Stage) : void
        - chargerPerspective(stage : Stage) : void
        + main(args : String[]) : void {static}
    }

'RELATIONS'
CommandePerspective --> Perspective : modifie
GestionnaireCommande --> "*" Commande : gère

Perspective --> PerspectiveMemento : crée / restaure

VueVignette --> ImageModele : observe
VuePerspective --> ImageModele : observe
VuePerspective --> Perspective : observe
VuePerspective ..> GestionnaireCommande : utilise
VuePerspective ..> CommandePerspective : crée

PressePapierMediateur --> CopieStrategie : utilise
PressePapierMediateur --> PerspectiveMemento : stocke
PressePapierMediateur ..> Perspective : copie / colle

ApplicationPrincipale --> ImageModele
ApplicationPrincipale --> Perspective
ApplicationPrincipale --> VueVignette
ApplicationPrincipale --> VuePerspective
ApplicationPrincipale ..> GestionnaireCommande : utilise
ApplicationPrincipale ..> PressePapierMediateur : utilise
ApplicationPrincipale ..> GestionnaireSauvegarde : utilise

ImageModele --|> SujetObservable
Perspective --|> SujetObservable


GestionnaireSauvegarde ..> DonneesSauvegarde

VuePerspective ..|> Observateur
VueVignette ..|> Observateur

@enduml
